# EspConsole

./: CMakeLists.txt  README.md  lv_conf.h  sdkconfig  sdkconfig.old
.github/workflows/: main.yml
core/: Game.hpp  GameManager.cpp  GameManager.hpp  GameRegistry.cpp  GameRegistry.hpp
docs/: game_framework.md
docs/diagrams/: architecture.puml  game_framework.puml  game_launch_sequence.puml
framework/: BaseGame.cpp  BaseGame.hpp  GameContext.hpp  GameUI.cpp  GameUI.hpp  TimerManager.cpp  TimerManager.hpp
games/: GamesConnector.hpp
games/arkanoid/: Arkanoid.cpp  Arkanoid.hpp
games/flappy_bird/: FlappyBird.cpp  FlappyBird.hpp
games/flappy_bird/assets/: bird.c  bird.h
games/game2048/: Game2048.cpp  Game2048.hpp
games/minesweeper/: Minesweeper.cpp  Minesweeper.hpp
games/racing/: Racing.cpp  Racing.hpp
games/simple_catcher/: SimpleCatcher.cpp  SimpleCatcher.hpp
games/snake/: Snake.cpp  Snake.hpp
games/tetris/: Tetris.cpp  Tetris.hpp
games/tower_bloxx/: TowerBloxx.cpp  TowerBloxx.hpp
games/tower_bloxx/assets/: base.c  base.h  blue_centre.c  blue_centre.h  green_centre.c  green_centre.h  purple_centre.c  purple_centre.h  red_centre.c  red_centre.h
hw_drivers/: display_driver.c  display_driver.h  gpio_driver.c  gpio_driver.h  hardware_info.c  hardware_info.h
include/: esp_log.h  lv_conf.h
lvgl_app/: lvgl_init.c  lvgl_init.h
lvgl_app/ui/: main_menu.cpp  main_menu.hpp
main/: CMakeLists.txt  app.cpp  app.h  app_config.h  diploma.c  logic_interface.cpp  logic_interface.h  tmp.c
platform/: InputRouter.cpp  InputRouter.hpp
screens/: MenuScreen.cpp  MenuScreen.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp
ui/: lvgl_helper.cpp  lvgl_helper.hpp
